--- a/portfolio.html
+++ b/portfolio.html
@@ -1,11 +1,86 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
 <body>
+    <header>
     
+<!--Логотип-->
+        <nav>
+            <a href="/" aria-label="логотип сайта">
+                <p lang="en"> WebStudio</p>
+            </a>
+<!--Главная навигация-->
+            <ul>
+                <li><a href="#">Студия</a></li>
+                <li><a href="#">Портфолио</a></li>
+                <li><a href="#">Контакты</a></li>
+            </ul>
+        </nav>
+        <address>
+            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+            <a href="tel:+380961111111 ">+38 096 111 11 11</a>
+        </address>
+    </header>
+    <main>
+
+<!--Герой-->
+<!-- <h1>Фильтры</h1> -->
+    <ul>
+    <li><button type="button">Все</button></li>
+    <li><button type="button">Веб-сайты</button></li>
+    <li><button type="button">Приложения</button></li>
+    <li><button type="button">Дизайн</button></li>
+    <li><button type="button">Маркетинг</button></li>
+    </ul>
+
+<!--Проекты-->
+    <ul>
+        <li><img src="./images-portfolio/img1.jpg" alt="Технокряк">
+            <h2>Технокряк</h2>
+            <p>Веб-сайт</p></li>
+        <li><img src="./images-portfolio/img2.jpg" alt="Постер New Orlean vs Golden Star">
+            <h2>Постер New Orlean vs Golden Star</h2>
+            <p>Дизайн</p></li>
+        <li><img src="./images-portfolio/img3.jpg" alt="Ресторан Seafood">
+            <h2>Ресторан Seafood</h2>
+            <p>Приложение</p></li>
+        <li><img src="./images-portfolio/img4.jpg" alt="Проект Prime">
+            <h2>Проект Prime</h2>
+            <p>Маркетинг</p></li>
+        <li><img src="./images-portfolio/img5.jpg" alt="Проект Boxes">
+            <h2>Проект Boxes</h2>
+            <p>Приложение</p></li>
+        <li><img src="./images-portfolio/img6.jpg" alt="Inspiration has no Borders">
+            <h2>Inspiration has no Borders</h2>
+            <p>Веб-сайт</p><li>
+        <li><img src="./images-portfolio/img7.jpg" alt="Издание Limited Edition">
+            <h2>Издание Limited Edition</h2>
+            <p>Дизайн</p></li>
+        <li><img src="./images-portfolio/img8.jpg" alt="Проект LAB">
+            <h2>Проект LAB</h2>
+            <p>Маркетинг</p></li>
+        <li><img src="./images-portfolio/img9.jpg" alt="Growing Business">
+            <h2>Growing Business</h2>
+            <p>Приложение</p></li>
+    </ul>
+    </main>
+
+<!-- Футер -->
+    <footer>
+        <a href="/" aria-label="логотип сайта">
+            <p lang="en"> WebStudio </p>
+        </a>
+        <address>
+            г. Киев, пр-т Леси Украинки, 26
+        </address>
+        <address>
+            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+            <a href="tel:+380961111111 ">+38 096 111 11 11</a>
+        </address>
+    </footer>
 </body>
 </html>
