Добавляет СSS до блока "Вид деятельности"
Добавляет СSS до блока "Вид деятельности" файла index.html

--- a/portfolio.html
+++ b/portfolio.html
@@ -9,10 +9,10 @@
     <header>
     
 <!--Логотип-->
-        <nav>
-            <a href="/" aria-label="логотип сайта">
-                <p lang="en"> WebStudio</p>
-            </a>
+<nav class="logo">
+    <a class="logo-link" href="/" aria-label="логотип сайта">
+    <p lang="en"> <span class="logo-text">Web</span>Studio</p>
+    </a>
 <!--Главная навигация-->
             <ul>
                 <li><a href="#">Студия</a></li>
@@ -39,40 +39,94 @@
 
 <!--Проекты-->
     <ul>
-        <li><img src="./images-portfolio/img1.jpg" alt="Технокряк">
+        <li><a href="">Технокряк
+            <img src="./images-portfolio/img1.jpg" alt="Технокряк">
             <h2>Технокряк</h2>
-            <p>Веб-сайт</p></li>
-        <li><img src="./images-portfolio/img2.jpg" alt="Постер New Orlean vs Golden Star">
+            <p>Веб-сайт</p>
+            <p>Технокряк это современная площадка рапространения коронавируса. 
+             Компании используют эту платформу для цифрового шпионажа и 
+             атак на защищённые сервера конкурентов.</p>
+            </a>
+            </li>
+        <li><a href="">Постер New Orlean vs Golden Star
+            <img src="./images-portfolio/img2.jpg" alt="Постер New Orlean vs Golden Star">
             <h2>Постер New Orlean vs Golden Star</h2>
-            <p>Дизайн</p></li>
-        <li><img src="./images-portfolio/img3.jpg" alt="Ресторан Seafood">
+            <p>Дизайн</p>
+            <p>Технокряк это современная площадка рапространения коронавируса.
+            Компании используют эту платформу для цифрового шпионажа и
+            атак на защищённые сервера конкурентов.</p>
+            </a>
+        </li>
+        <li><a href="">Ресторан Seafood
+            <img src="./images-portfolio/img3.jpg" alt="Ресторан Seafood">
             <h2>Ресторан Seafood</h2>
-            <p>Приложение</p></li>
-        <li><img src="./images-portfolio/img4.jpg" alt="Проект Prime">
+            <p>Приложение</p>
+            <p>Технокряк это современная площадка рапространения коронавируса.
+            Компании используют эту платформу для цифрового шпионажа и
+            атак на защищённые сервера конкурентов.</p>
+            </a>
+        </li>
+        <li><a href="">Проект Prime
+            <img src="./images-portfolio/img4.jpg" alt="Проект Prime">
             <h2>Проект Prime</h2>
-            <p>Маркетинг</p></li>
-        <li><img src="./images-portfolio/img5.jpg" alt="Проект Boxes">
+            <p>Маркетинг</p>
+            <p>Технокряк это современная площадка рапространения коронавируса.
+            Компании используют эту платформу для цифрового шпионажа и
+            атак на защищённые сервера конкурентов.</p>
+            </a>
+        </li>
+        <li><a href="">Проект Boxes
+            <img src="./images-portfolio/img5.jpg" alt="Проект Boxes">
             <h2>Проект Boxes</h2>
-            <p>Приложение</p></li>
-        <li><img src="./images-portfolio/img6.jpg" alt="Inspiration has no Borders">
+            <p>Приложение</p>
+            <p>Технокряк это современная площадка рапространения коронавируса.
+            Компании используют эту платформу для цифрового шпионажа и
+            атак на защищённые сервера конкурентов.</p>
+            </a>
+        </li>
+        <li><a href="">Inspiration has no Borders
+            <img src="./images-portfolio/img6.jpg" alt="Inspiration has no Borders">
             <h2>Inspiration has no Borders</h2>
-            <p>Веб-сайт</p><li>
-        <li><img src="./images-portfolio/img7.jpg" alt="Издание Limited Edition">
+            <p>Веб-сайт</p>
+            <p>Технокряк это современная площадка рапространения коронавируса.
+            Компании используют эту платформу для цифрового шпионажа и
+            атак на защищённые сервера конкурентов.</p>
+            </a>
+        </li>
+        <li><a href="">Издание Limited Edition
+            <img src="./images-portfolio/img7.jpg" alt="Издание Limited Edition">
             <h2>Издание Limited Edition</h2>
-            <p>Дизайн</p></li>
-        <li><img src="./images-portfolio/img8.jpg" alt="Проект LAB">
+            <p>Дизайн</p>
+            <p>Технокряк это современная площадка рапространения коронавируса.
+            Компании используют эту платформу для цифрового шпионажа и
+            атак на защищённые сервера конкурентов.</p>
+            </a>
+        </li>
+        <li><a href="">Проект LAB
+            <img src="./images-portfolio/img8.jpg" alt="Проект LAB">
             <h2>Проект LAB</h2>
-            <p>Маркетинг</p></li>
-        <li><img src="./images-portfolio/img9.jpg" alt="Growing Business">
+            <p>Маркетинг</p>
+            <p>Технокряк это современная площадка рапространения коронавируса.
+            Компании используют эту платформу для цифрового шпионажа и
+            атак на защищённые сервера конкурентов.</p>
+            </a>
+        </li>
+        <li><a href="">Growing Business
+            <img src="./images-portfolio/img9.jpg" alt="Growing Business">
             <h2>Growing Business</h2>
-            <p>Приложение</p></li>
+            <p>Приложение</p>
+            <p>Технокряк это современная площадка рапространения коронавируса.
+            Компании используют эту платформу для цифрового шпионажа и
+            атак на защищённые сервера конкурентов.</p>
+            </a>
+        </li>
     </ul>
     </main>
 
 <!-- Футер -->
     <footer>
-        <a href="/" aria-label="логотип сайта">
-            <p lang="en"> WebStudio </p>
+        <a class="logo-link" href="/" aria-label="логотип сайта">
+        <p lang="en"> <span class="logo-text">Web</span>Studio</p>
         </a>
         <address>
             г. Киев, пр-т Леси Украинки, 26
