--- a/index.html
+++ b/index.html
@@ -4,54 +4,58 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+        rel="stylesheet">
+        <link rel="stylesheet" href="/css/styles.css">
 </head>
 <body>
-    <header>
+    <header class="header">
 
 <!--Логотип-->
-    <nav>
-        <a href="/" aria-label="логотип сайта">
-            <p lang="en"> WebStudio</p>
+    <nav class="logo">
+        <a class="logo-link" href="/" aria-label="логотип сайта">
+            <p lang="en"> <span class="logo-text">Web</span>Studio</p>
         </a>
 <!--Главная навигация-->
-    <ul>
-    <li><a href="#">Студия</a></li>
-    <li><a href="#">Портфолио</a></li>
-    <li><a href="#">Контакты</a></li>
+    <ul class="navigation-list">
+    <li class="navigation-list-item"><a class="navigation-list-link" href="#">Студия</a></li>
+    <li class="navigation-list-item"><a class="navigation-list-link" href="#">Портфолио</a></li>
+    <li class="navigation-list-item"><a class="navigation-list-link" href="#">Контакты</a></li>
     </ul>  
     </nav>
-    <address>
-    <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-    <a href="tel:+380961111111 ">+38 096 111 11 11</a>
+    <address class="address">
+    <a class="address-mail" href="mailto:info@devstudio.com">info@devstudio.com</a>
+    <a class="address-contact" href="tel:+380961111111 ">+38 096 111 11 11</a>
     </address>  
     </header>
 <main>
 
 <!--Герой-->
-<section>
-        <h1>Эффективные решения для вашего бизнеса</h1>
-        <button type="button">Заказать услугу</button>
+<section class="hero">
+        <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
+        <button class="hero-btn" type="button">Заказать услугу</button>
     </section>
 
 <!--Особенности-->
 <!--<h2>Наши особенности</h2>-->
-<section>
-<ul>
+<section class="special">
+<ul class="special-list">
     <li>
-        <h3>Внимание к деталям</h3>
-        <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
+        <h3 class="special-list-title">Внимание к деталям</h3>
+        <p class="special-list-text">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
     </li>
     <li>
-        <h3>Пунктуальность</h3>
-        <p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
+        <h3 class="special-list-title">Пунктуальность</h3>
+        <p class="special-list-text">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
     </li>
     <li>
-        <h3>Планирование</h3>
-        <p>Равным образом консультация с широким активом в значительной степени обуславливает.</p>
+        <h3 class="special-list-title">Планирование</h3>
+        <p class="special-list-text">Равным образом консультация с широким активом в значительной степени обуславливает.</p>
     </li>
     <li>
-        <h3>Современные технологии</h3>
-        <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
+        <h3 class="special-list-title">Современные технологии</h3>
+        <p class="special-list-text">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
     </li>
 </ul> 
     </section>
@@ -102,8 +106,8 @@
 
 <!--Подвал-->   
     <footer>
-        <a href="/" aria-label="логотип сайта">
-            <p lang="en"> WebStudio </p>
+            <a class="logo-link" href="/" aria-label="логотип сайта">
+            <p lang="en"> <span class="logo-text">Web</span>Studio</p>
         </a>
             <address>
             г. Киев, пр-т Леси Украинки, 26
