--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
 <!--Логотип-->
     <nav class="logo">
         <a class="logo-link" href="/" aria-label="логотип сайта">
-            <p lang="en"> <span class="logo-text">Web</span>Studio</p>
+        <p class="logo-text" lang="en"> <span class="logo-text-accent">Web</span>Studio</p>
         </a>
 <!--Главная навигация-->
     <ul class="navigation-list">
-    <li class="navigation-list-item"><a class="navigation-list-link" href="#">Студия</a></li>
-    <li class="navigation-list-item"><a class="navigation-list-link" href="#">Портфолио</a></li>
-    <li class="navigation-list-item"><a class="navigation-list-link" href="#">Контакты</a></li>
+       <li class="navigation-list-item"><a class="navigation-list-link" href="#">Студия</a></li>
+       <li class="navigation-list-item"><a class="navigation-list-link" href="#">Портфолио</a></li>
+       <li class="navigation-list-item"><a class="navigation-list-link" href="#">Контакты</a></li>
     </ul>  
     </nav>
     <address class="address">
@@ -61,60 +61,59 @@
     </section>
 
 <!-- Вид деятельности-->
-<section>
-    <h2>Чем мы занимаемся</h2>
-    <ul>
-        <li>
-            <img src="./images/img1.jpg" alt="Сотрудник печатает на клавиатуре" width="370" height="294" />
+<section class="work" >
+    <h2 class="work-title">Чем мы занимаемся</h2>
+    <ul class="work-list">
+        <li class="work-list-item">
+            <img class="work-list-img" src="./images/img1.jpg" alt="Сотрудник печатает на клавиатуре" width="370" height="294" />
         </li>
-        <li>
-            <img src="./images/img2.jpg" alt="Сотрудник пишет на ноутбуке" width="370" height="294" />
+        <li class="work-list-item">
+            <img class="work-list-img" src="./images/img2.jpg" alt="Сотрудник пишет на ноутбуке" width="370" height="294" />
         </li>
-        <li>
-            <img src="./images/img3.png" alt="Сотрудник рисует на планшете" width="370" height="294" />
+        <li class="work-list-item">
+            <img class="work-list-img" src="./images/img3.png" alt="Сотрудник рисует на планшете" width="370" height="294" />
         </li>
     </ul>
 </section>
 
 <!-- Наша команда-->
-<section>
-    <h2>Наша команда</h2>
-    <ul>
-        <li>
-            <img src="./images/image-1.jpg" alt="Игорь Демьяненко" width="270" height="260">
-            <h3>Игорь Демьяненко</h3>
-            <p lang="en">Product Designer</p>
+<section class="team">
+    <h2 class="team-title">Наша команда</h2>
+    <ul class="team-list" >
+        <li class="team-list-item">
+            <img class="team-foto" src="./images/image-1.jpg" alt="Игорь Демьяненко" width="270" height="260">
+            <h3 class="team-name">Игорь Демьяненко</h3>
+            <p class="team-name-position" lang="en">Product Designer</p>
         </li>
-        <li>
-            <img src="./images/image-2.jpg" alt="Ольга Репина" width="270" height="260">
-            <h3>Ольга Репина</h3>
-            <p lang="en">Frontend Developer</p>
+        <li class="team-list-item">
+            <img class="team-foto" src="./images/image-2.jpg" alt="Ольга Репина" width="270" height="260">
+            <h3 class="team-name">Ольга Репина</h3>
+            <p class="team-name-position" lang="en">Frontend Developer</p>
         </li>
-        <li>
-            <img src="./images/image-3.jpg" alt="Николай Тарасов" width="270" height="260">
-            <h3>Николай Тарасов</h3>
-            <p lang="en">Marketing</p>
+        <li class="team-list-item">
+            <img class="team-foto" src="./images/image-3.jpg" alt="Николай Тарасов" width="270" height="260">
+            <h3 class="team-name">Николай Тарасов</h3>
+            <p class="team-name-position" lang="en">Marketing</p>
         </li>
-        <li>
-            <img src="./images/image-4.jpg" alt="Михаил Ермаков" width="270" height="260">
-            <h3>Михаил Ермаков</h3>
-            <p lang="en">UI Designer</p>
+        <li class="team-list-item">
+            <img class="team-foto" src="./images/image-4.jpg" alt="Михаил Ермаков" width="270" height="260">
+            <h3 class="team-name">Михаил Ермаков</h3>
+            <p class="team-name-position" lang="en">UI Designer</p>
         </li>
     </ul>
 </section>
 </main>
 
 <!--Подвал-->   
-    <footer>
+    <footer class="footer">
             <a class="logo-link" href="/" aria-label="логотип сайта">
-            <p lang="en"> <span class="logo-text">Web</span>Studio</p>
+            <p class="logo-text" lang="en"> <span class="logo-text-accent">Web</span>Studio</p>
         </a>
-            <address>
-            г. Киев, пр-т Леси Украинки, 26
+            <address class="footer-address"> г. Киев, пр-т Леси Украинки, 26
             </address>
-        <address>
-            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-            <a href="tel:+380961111111 ">+38 096 111 11 11</a>
+        <address class="footer-contact">
+            <a class="footer-mail" href="mailto:info@devstudio.com">info@devstudio.com</a>
+            <a class="footer-tel" href="tel:+380961111111 ">+38 096 111 11 11</a>
         </address>
     </footer>
     </body>
