Добавляет стили ко 2-му ДЗ

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <!--Главная навигация-->
     <ul class="navigation-list">
        <li class="navigation-list-item"><a class="navigation-list-link" href="#">Студия</a></li>
-       <li class="navigation-list-item"><a class="navigation-list-link" href="#">Портфолио</a></li>
+       <li class="navigation-list-item"><a class="navigation-list-link" href="./portfolio.html">Портфолио</a></li>
        <li class="navigation-list-item"><a class="navigation-list-link" href="#">Контакты</a></li>
     </ul>  
     </nav>
@@ -107,7 +107,7 @@
 <!--Подвал-->   
     <footer class="footer">
             <a class="logo-link" href="/" aria-label="логотип сайта">
-            <p class="logo-text" lang="en"> <span class="logo-text-accent">Web</span>Studio</p>
+            <p class="light-theme logo-text" lang="en"> <span class="logo-text-accent">Web</span>Studio</p>
         </a>
             <address class="footer-address"> г. Киев, пр-т Леси Украинки, 26
             </address>
