--- a/portfolio.html
+++ b/portfolio.html
@@ -24,7 +24,7 @@
             <li class="navigation-list-item"><a class="navigation-list-link" href="#">Контакты</a></li>
         </ul>
         </nav>
-        <addressclass="address">
+        <address class="address">
     <a class="address-mail" href="mailto:info@devstudio.com">info@devstudio.com</a>
     <a class="address-contact" href="tel:+380961111111 ">+38 096 111 11 11</a>
         </address>
@@ -94,7 +94,7 @@
 <!-- Футер -->
     <footer class="footer">
         <a class="logo-link" href="/" aria-label="логотип сайта">
-        <p class="logo-text" lang="en"> <span class="logo-text-accent">Web</span>Studio</p>
+        <p class="light-theme logo-text" lang="en"> <span class="logo-text-accent">Web</span>Studio</p>
         </a>
         <address class="footer-address">
             г. Киев, пр-т Леси Украинки, 26
