Исправляет замечание ментора
https://prnt.sc/voz37k - не тот шрифт на лого
https://prnt.sc/voz5fw - подчеркиваниесо ссилок уберите и маркеры со списков
https://prnt.sc/voz62r - отмените курсив, где он есть
https://prnt.sc/voz74l - это секция
https://prnt.sc/voz8ey - кнопки не наследуют шрифт - пропишите отдельно

--- a/portfolio.html
+++ b/portfolio.html
@@ -33,6 +33,7 @@
 
 <!--Герой-->
 <!-- <h1>Фильтры</h1> -->
+<section class=" portfolio">
     <ul class="filter">
     <li class="filter-list"><button class="filter-list-btn" type="button">Все</button></li>
     <li class="filter-list"><button class="filter-list-btn" type="button">Веб-сайты</button></li>
@@ -40,7 +41,6 @@
     <li class="filter-list"><button class="filter-list-btn" type="button">Дизайн</button></li>
     <li class="filter-list"><button class="filter-list-btn" type="button">Маркетинг</button></li>
     </ul>
-
 <!--Проекты-->
     <ul class="projects">
         <li class="projects-list">
@@ -89,6 +89,7 @@
             <p class="projects-text-item">Приложение</p>
         </li>
         </ul>
+        </section>
     </main>
 
 <!-- Футер -->
